# SeaClient

./: .gitignore  .gitmodules  CMakeLists.txt  build_proto.sh
API/: CMakeLists.txt
API/include/: auth.h  client.h  net.h  packet.h  seaclient_api.h
API/include/packet/: auth_packet.h  auth_packets.h  error_packets.h  main_packet.h  packet.h  player_packet.h  service_packet.h  service_packets.h  ss_error_packet.pb-c.h  ss_guest_auth.pb-c.h
API/src/: auth.c  client.c  net.c  packet.c
API/src/packet/: auth_packet.c  packet.c  player_packet.c  service_packet.c  ss_error_packet.pb-c.c  ss_guest_auth.pb-c.c
ExampleClient/: CMakeLists.txt
ExampleClient/include/: main.h  user_actions.h
ExampleClient/src/: main.c  user_actions.c
include/: client.h  event.h  main.h  net.h  support.h  worker.h
src/: client.c  event.c  main.c  net.c  worker.c
